@@ -157,6 +157,9 @@ Thomas Meyer and Tom Power for contributing to this release.
 }}}
 {{{ Editing
 
+- Shellscript mode: changed electric keys to better fit current jEdit
+  capabilities in this area. (Jarek Czekalski)
+
 - Made markers list selectable with keyboard. (patch #3509642 Tom Power)
 
 - Ada mode improvements (patch #3523836 Peter C. Chapin,
